# q3bsp

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  archive.cc  archive.h  bezier.cc  bezier.h  binio.cc  binio.h  bsp.cc  bsp.h  exception.h  frustum.cc  frustum.h  ibsp.h  ibsp46.h  image.cc  image.h  main.cc  sdlsentry.h  tex.cc  tex.h  texture.cc  texture.h  time.cc  time.h  types.h  vec.cc  vec.h  zipfile.cc  zipfile.h
src/math/: matrix4.h  util.h  vector3.h  vector4.h
